--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack --watch",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
@@ -22,6 +23,7 @@
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.0.1",
+    "extract-text-webpack-plugin": "^3.0.0",
     "jest": "^20.0.4",
     "live-server": "^1.2.0",
     "moment": "^2.18.1",
@@ -43,5 +45,8 @@
     "validator": "8.0.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "^2.5.1"
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "^0.9.0"
   }
 }
