--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "6.24.1",
     "chalk": "^3.0.0",
     "css-loader": "^0.28.4",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "moment": "^2.18.1",
     "node-sass": "^4.13.0",
